--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -111,4 +111,7 @@ jobs:
         
         echo "--- Running Lexer on VM ---"
         ./vm lexer.ir
-
+    - name: VM sanity check
+      run: |
+        python compiler_ir.py vm.py1 > vm.ir
+        python vm.py1 vm.ir
