--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -111,7 +111,7 @@ jobs:
         
         echo "--- Running Lexer on VM ---"
         ./vm lexer.ir
-    - name: VM sanity check
+    - name: VM self-hosting sanity check
       run: |
-        python compiler_ir.py vm.py1 > vm.ir
-        python vm.py1 vm.ir
+        python compiler_gen3.py vm.py1 > vm.py
+        python vm.py vm.ir
