--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -215,11 +215,323 @@ jobs:
         python py1repl_final.py fizzbuzz.ir
 
     # 17. Windows Native IR
+        # 17. Windows Native IR (修正版: LEA命令追加)
     - name: 17. Windows Native IR
       run: |
+        # --- 1. WinIR Generator (Spec) ---
+        cat <<'EOF' > win_ir_spec.py1
+        # Windows Native IR Generator
+        @v 表 'print'
+        @v 追 'append'
+        @v 字 'str'
+        @v 結 '"\n".join'
+
+        @v 置 '"MOV"'
+        @v 取 '"LEA"'  # New: Load Effective Address
+        @v 書 '"WRITE_MEM"'
+        @v 零 '"JZ"'
+        @v 比 '"CMP"'
+        @v 加 '"ADD"'
+        @v 連 '"LOAD_DLL"'
+        @v 得 '"GET_PROC"'
+        @v 呼 '"CALL_API"'
+        @v 押 '"PUSH"'
+        @v 札 '"LABEL"'
+
+        # Registers
+        @v 壱 '"RBX"'
+        @v 弐 '"R12"'
+        @v 肆 '"R13"'
+        @v 繰 '"RCX"'
+        @v タ '"RDX"'
+        @v 蜂 '"R8"'
+        @v 苦 '"R9"'
+        @v 蓄 '"RAX"'
+
+        # Data
+        @v コ 'codes'
+        @v 蔵 '"kernel32.dll"'
+        @v 出 '"GetStdHandle"'
+        @v 記 '"WriteFile"'
+        @v 終 '"ExitProcess"'
+        @v 陰 '"-11"'
+        @v 空 '" "'
+
+        # Constants
+        @v 一 '"1"'
+        @v 十 '"10"'
+        @v 限 '"16"'
+        @v 二 '"2"'
+        @v 頁 '"100"'
+        @v 次 '"101"'
+        @v 予 '"200"'
+        @v 無 '"0"'
+        @v 判 '"49"'
+        @v 廻 '"LOOP_START"'
+        @v 去 '"EXIT"'
+
+        $
+
+        コ = []
+
+        # Init
+        コ.追(連 + 空 + 蔵)
+        コ.追(得 + 空 + 出)
+        コ.追(置 + 空 + 繰 + 空 + 陰)
+        コ.追(呼 + 空 + 出)
+        コ.追(置 + 空 + 肆 + 空 + 蓄) # Save Handle
+        コ.追(得 + 空 + 記)
+        コ.追(得 + 空 + 終)
+
+        # Loop Init
+        コ.追(置 + 空 + 壱 + 空 + 一)
+
+        # LABEL
+        コ.追(札 + 空 + 廻)
+
+        # Check Loop
+        コ.追(置 + 空 + 弐 + 空 + 限)
+        コ.追(比 + 空 + 壱 + 空 + 弐)
+        コ.追(零 + 空 + 去)
+
+        # Write Logic
+        コ.追(書 + 空 + 頁 + 空 + 判)
+        コ.追(書 + 空 + 次 + 空 + 十)
+
+        # Call WriteFile
+        コ.追(置 + 空 + 繰 + 空 + 肆)
+        # 【修正】Use LEA for pointers
+        コ.追(取 + 空 + タ + 空 + 頁) # LEA RDX, 100
+        コ.追(置 + 空 + 蜂 + 空 + 二)
+        コ.追(取 + 空 + 苦 + 空 + 予) # LEA R9, 200
+        コ.追(押 + 空 + 無)
+        コ.追(呼 + 空 + 記)
+
+        # Inc & Loop
+        コ.追(加 + 空 + 壱 + 空 + 一)
+        コ.追(札 + 空 + 去)
+        
+        # Exit
+        コ.追(置 + 空 + 繰 + 空 + 無)
+        コ.追(呼 + 空 + 終)
+
+        表(結(コ))
+        EOF
+
+        # Generate IR
         python stage2_compiler.py win_ir_spec.py1 > win_ir_gen.py
         python win_ir_gen.py > fizzbuzz_win.ir
-        cat fizzbuzz_win.ir
+        
+        # --- 2. Mock VM (Updated for LEA) ---
+        cat <<'EOF' > vm_win_mock.py1
+        # Mock VM with LEA support
+        @v 表 'print'
+        @v 整 'int'
+        @v 寸 'len'
+        @v 追 'append'
+        @v 裂 'split'
+        @v 削 'strip'
+        @v 行 'splitlines'
+        @v 開 'open'
+        @v 読 'read'
+        @v 換 'replace'
+        @v 始 'startswith'
+        @v 終 'exit'
+        @v 実 'exec'
+        @v 字 'chr'
+        @v 数 'isnumeric'
+        @v 拾 'get'
+
+        @v 系 'sys'
+        @v 係 'argv'
+        @v 込 '"import sys"'
+        @v 術 'def'
+        @v も 'if'
+        @v 他 'else'
+        @v 循 'while'
+        @v 入 'in'
+        @v 或 'elif'
+
+        @v 置 '"MOV"'
+        @v 取 '"LEA"'
+        @v 呼 '"CALL_API"'
+        @v 連 '"LOAD_DLL"'
+        @v 得 '"GET_PROC"'
+        @v 書 '"WRITE_MEM"'
+        @v 札 '"LABEL"'
+        @v 比 '"CMP"'
+        @v 零 '"JZ"'
+        @v 加 '"ADD"'
+        @v 押 '"PUSH"'
+
+        @v 外 'args'
+        @v 径 'path'
+        @v 本 'body'
+        @v 生 'lines'
+        @v コ 'codes'
+        @v 順 'i'
+        @v 線 'line'
+        @v 部 'parts'
+        @v 技 'op'
+        @v 偽 'mock_api'
+        @v 名 'name'
+        @v 先 'dst'
+        @v 元 'src'
+        @v 値 'val'
+        @v レ 'regs'
+        @v メ 'mem'
+        @v 局 'apis'
+        @v 指 'ip'
+        @v 辞 'labels'
+
+        @v 所 'addr'
+        @v 基 'buf_addr'
+        @v 幅 'length'
+        @v 器 'buffer'
+        @v カ 'k'
+        @v 符 'char_code'
+        @v 果 'exit_code'
+        @v 甲 'val_a'
+        @v 乙 'val_b'
+
+        @v 核 '"kernel32.dll"'
+        @v ハ '"GetStdHandle"'
+        @v ラ '"WriteFile"'
+        @v 逝 '"ExitProcess"'
+        @v 題 '"MockWin: "'
+        @v 間 '" "'
+        @v モ '"r"'
+        @v 権 '"utf-8"'
+        @v 号 'encoding'
+        @v 蓄 '"RAX"'
+        @v 繰 '"RCX"'
+        @v タ '"RDX"'
+        @v 蜂 '"R8"'
+        @v 旗 '"ZF"'
+        @v 空 '""'
+        @v 説 '"Usage"'
+        
+        $
+
+        実(込)
+
+        術 偽(名, レ, メ):
+         も 名 == ハ:
+          レ[蓄] = 1
+         或 名 == ラ:
+          基 = レ[タ]
+          幅 = レ[蜂]
+          器 = 空
+          カ = 0
+          循 カ < 幅:
+           符 = メ.拾(基 + カ, 0)
+           器 = 器 + 字(符)
+           カ = カ + 1
+          表(題 + 器.削())
+          レ[蓄] = 1
+         或 名 == 逝:
+          系.終(0)
+
+        術 動(コ):
+         レ = {}
+         メ = {}
+         局 = {}
+         指 = 0
+         
+         辞 = {}
+         順 = 0
+         循 順 < 寸(コ):
+          線 = コ[順]
+          部 = 線.裂(間)
+          も 部[0] == 札:
+           辞[部[1]] = 順
+          順 = 順 + 1
+         
+         循 指 < 寸(コ):
+          線 = コ[指]
+          部 = 線.裂(間)
+          技 = 部[0]
+          
+          も 技 == 連:
+           0
+          或 技 == 得:
+           局[部[1]] = 部[1]
+          或 技 == 呼:
+           偽(部[1], レ, メ)
+          
+          或 技 == 置:
+           先 = 部[1]
+           元 = 部[2]
+           も 元.数():
+            レ[先] = 整(元)
+           他:
+            も 元 入 レ:
+             レ[先] = レ[元]
+            他:
+             レ[先] = 整(元)
+
+          # 【修正】LEA behaves like MOV in Mock (int -> int)
+          或 技 == 取:
+           先 = 部[1]
+           元 = 部[2]
+           レ[先] = 整(元)
+
+          或 技 == 書:
+           所 = 整(部[1])
+           値 = 整(部[2])
+           メ[所] = 値
+          
+          或 技 == 比:
+           先 = 部[1]
+           元 = 部[2]
+           甲 = レ.拾(先, 0)
+           も 元 入 レ:
+            乙 = レ[元]
+           他:
+            乙 = 整(元)
+           も 甲 == 乙:
+            レ[旗] = 1
+           他:
+            レ[旗] = 0
+          
+          或 技 == 零:
+           も レ.拾(旗, 0) == 1:
+            指 = 辞[部[1]]
+          
+          或 技 == 加:
+           先 = 部[1]
+           元 = 部[2]
+           甲 = レ.拾(先, 0)
+           も 元.数():
+            乙 = 整(元)
+           他:
+            乙 = レ[元]
+           レ[先] = 甲 + 乙
+          
+          指 = 指 + 1
+
+        外 = 系.係
+        も 寸(外) < 2:
+         表(説)
+         系.終(1)
+
+        径 = 外[1]
+        本 = 開(径, モ, 号=権).読()
+        生 = 本.行()
+        コ = []
+
+        順 = 0
+        循 順 < 寸(生):
+         線 = 生[順]
+         線 = 線.削()
+         も 寸(線) > 0:
+          コ.追(線)
+         順 = 順 + 1
+
+        動(コ)
+        EOF
+        
+        # Run Mock
         python stage2_compiler.py vm_win_mock.py1 > vm_win_mock.py
         python vm_win_mock.py fizzbuzz_win.ir
 
@@ -234,13 +546,11 @@ jobs:
       run: nasm -v
         # 【追加】最新の厳格な compiler_x64.py1 を作成する
     
+        # 19.5 Create compiler_x64.py1 (Fix: Handle LEA)
     - name: 19.5 Create compiler_x64.py1
       run: |
         cat <<'EOF' > compiler_x64.py1
         # WinIR to NASM x64 Compiler
-        # Strict 1-char variable naming applied.
-
-        # System
         @v 表 'print'
         @v 寸 'len'
         @v 追 'append'
@@ -256,20 +566,17 @@ jobs:
         @v 字 'chr'
         @v 数 'isnumeric'
 
-        # Modules
         @v 系 'sys'
         @v 係 'argv'
         @v 込 '"import sys"'
-
-        # Control Flow
         @v も 'if'
         @v 他 'else'
         @v 循 'while'
         @v 入 'in'
         @v 或 'elif'
 
-        # Opcodes (WinIR)
         @v 置 '"MOV"'
+        @v 取 '"LEA"'
         @v 呼 '"CALL_API"'
         @v 連 '"LOAD_DLL"'
         @v 得 '"GET_PROC"'
@@ -280,11 +587,9 @@ jobs:
         @v 加 '"ADD"'
         @v 押 '"PUSH"'
 
-        # Assembly Templates
         @v 頭 '"default rel\nsection .text\n  global main\n  extern GetStdHandle\n  extern WriteFile\n  extern ExitProcess\n\nmain:\n  sub rsp, 40\n"'
         @v 尾 '"  add rsp, 40\n  ret\n\nsection .bss\n  mem_base resb 65536\n"'
 
-        # Formatting Constants & Output Strings
         @v 改 '"\n"'
         @v 空 '" "'
         @v 点 '","'
@@ -293,16 +598,17 @@ jobs:
         @v 閉 '"]"'
         @v 影 '"qword [rsp + 32]"'
 
-        # Assembly Instructions as 1-char Macros
         @v 転 '"mov "'
+        @v 汲 '"lea "'
         @v 足 '"add "'
         @v 比 '"cmp "'
         @v 跳 '"je "'
         @v 喚 '"call "'
         @v 注 '"; "'
         @v 釘 '":"'
+        @v 処 '"[mem_base + "'
+        @v 端 '"]"'
 
-        # Misc Literals
         @v 説 '"Usage: compiler_x64.py <win.ir>"'
         @v モ '"r"'
         @v 権 '"utf-8"'
@@ -310,7 +616,6 @@ jobs:
         @v 無 '""'
         @v 井 '"#"'
 
-        # Variables
         @v 外 'args'
         @v 径 'path'
         @v 本 'body'
@@ -327,7 +632,6 @@ jobs:
 
         実(込)
 
-        # Main Logic
         外 = 系.係
         も 寸(外) < 2:
          表(説)
@@ -337,7 +641,6 @@ jobs:
         本 = 開(径, モ, 号=権).読()
         生 = 本.行()
 
-        # Output Header
         表(頭)
 
         順 = 0
@@ -348,79 +651,60 @@ jobs:
          技 = 部[0]
          出 = 無
 
-         # Skip empty lines
          も 寸(線) == 0:
           0
          
-         # Skip comment lines
          も 線.始(井):
           0
 
-         # LOAD_DLL / GET_PROC -> Comment out
          或 技 == 連:
           出 = 注 + 線
          或 技 == 得:
           出 = 注 + 線
-
-         # LABEL name -> name:
          或 技 == 札:
           出 = 部[1] + 釘
 
-         # MOV dst, src
          或 技 == 置:
           先 = 部[1]
           元 = 部[2]
-          # mov dst, src
           出 = 幕 + 転 + 先 + 点 + 元
 
-         # ADD dst, src
+         # 【修正】Handle LEA: lea dst, [mem_base + src]
+         或 技 == 取:
+          先 = 部[1]
+          元 = 部[2]
+          出 = 幕 + 汲 + 先 + 点 + 処 + 元 + 端
+
          或 技 == 加:
           先 = 部[1]
           元 = 部[2]
-          # add dst, src
           出 = 幕 + 足 + 先 + 点 + 元
-
-         # CMP dst, src
          或 技 == 較:
           先 = 部[1]
           元 = 部[2]
-          # cmp dst, src
           出 = 幕 + 比 + 先 + 点 + 元
-
-         # JZ label -> je label
          或 技 == 零:
           先 = 部[1]
-          # je label
           出 = 幕 + 跳 + 先
-
-         # WRITE_MEM addr val
          或 技 == 書:
           先 = 部[1]
           元 = 部[2]
-          # mov byte [mem_base + addr], val
           出 = 幕 + 転 + 基 + 先 + 閉 + 点 + 元
-
-         # PUSH val -> mov qword [rsp+32], val
          或 技 == 押:
           元 = 部[1]
-          # mov qword [rsp + 32], val
           出 = 幕 + 転 + 影 + 点 + 元
-         
-         # CALL_API name -> call name
          或 技 == 呼:
           先 = 部[1]
-          # call name
           出 = 幕 + 喚 + 先
 
-         # Output generated line
          も 寸(出) > 0:
           表(出)
 
          順 = 順 + 1
 
-        # Output Footer
         表(尾)
         EOF
+
 
     # 20. Generate x64 ASM (既存のステップ)
     - name: 20. Generate x64 ASM
